tetrate/tis1105/.chainsaw-test/resource-two.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtual-service-2
  namespace: default
spec:
  hosts:
  - "my-app.example.com"
  gateways:
  - "gateway-2"
  http:
  - route:
    - destination:
        host: "my-app-service.default.svc.cluster.local"
