tetrate/tis1105/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-single-virtualservice-per-host
spec:
  validationFailureAction: Enforce
